# ChessEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements-tools.txt
apps/: bench_main.cpp  perft_main.cpp  referee_main.cpp  uci_main.cpp
data/suites/: bench.epd  lichess_tactics_250.epd  strategy.epd  tactics.epd
docs/: ENGINEERING_APPROACH.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
include/chess/core/: attacks.h  board.h  fen.h  game_status.h  move.h  movegen.h  perft.h  types.h  zobrist.h
include/chess/engine/: evaluation.h  nnue.h  opening_book.h  position_suite.h  search.h  static_exchange.h  tablebase.h  transposition_table.h
runs/benchmarks/: full-threats-512-002-depth5.csv  full-threats-512-002-v7-depth5.csv  full-threats-512-depth5.csv
runs/gauntlets/current-eval-vs-stockfish-1500-smoke/: game-0001.pgn  game-0002.pgn  game-0003.pgn  game-0004.pgn  game-0005.pgn  game-0006.pgn  game-0007.pgn  game-0008.pgn  game-0009.pgn  game-0010.pgn  game-0011.pgn  game-0012.pgn  game-0013.pgn  game-0014.pgn  game-0015.pgn  game-0016.pgn  game-0017.pgn  game-0018.pgn  game-0019.pgn  game-0020.pgn  game-0021.pgn  game-0022.pgn  game-0023.pgn  game-0024.pgn  game-0025.pgn  game-0026.pgn  game-0027.pgn  game-0028.pgn  game-0029.pgn  game-0030.pgn  game-0031.pgn  game-0032.pgn  game-0033.pgn  game-0034.pgn  game-0035.pgn  game-0036.pgn  game-0037.pgn  game-0038.pgn  game-0039.pgn  game-0040.pgn  (+62 more)
runs/gauntlets/current-qsearch-vs-stockfish-1500/: game-0001.pgn  game-0002.pgn  game-0003.pgn
runs/gauntlets/current-qsearch-vs-stockfish-1500-fixed/: game-0001.pgn
runs/gauntlets/current-qsearch-vs-stockfish-1500-live/: live-state.json
runs/gauntlets/full-threats-512-002-nnue-vs-stockfish1500/: game-0001.pgn  game-0002.pgn  live-state.json
runs/gauntlets/full-threats-v7-nnue-t22-vs-stockfish1700-3m2s-10/: game-0001.pgn
runs/gauntlets/full-threats-v7-nnue-vs-stockfish1500-3m2s-10b/: game-0001.pgn  game-0002.pgn  game-0003.pgn  game-0004.pgn  game-0005.pgn  game-0006.pgn  game-0007.pgn  game-0008.pgn  game-0009.pgn  game-0010.pgn  results.csv
runs/gauntlets/full-threats-v7-nnue-vs-stockfish1500-3m2s-40/: game-0001.pgn  game-0002.pgn  game-0003.pgn  game-0004.pgn  game-0005.pgn  game-0006.pgn  game-0007.pgn  game-0008.pgn  game-0009.pgn  game-0010.pgn  game-0011.pgn  game-0012.pgn  game-0013.pgn  game-0014.pgn  game-0015.pgn  game-0016.pgn  game-0017.pgn  game-0018.pgn  game-0019.pgn  game-0020.pgn  game-0021.pgn  game-0022.pgn  live-state.json
runs/postmortems/current-eval-vs-stockfish-1500/: events.csv  positions.epd  postmortem.json  report.md
src/core/: attacks.cpp  board.cpp  fen.cpp  game_status.cpp  move.cpp  movegen.cpp  perft.cpp  zobrist.cpp
src/engine/: evaluation.cpp  nnue.cpp  opening_book.cpp  position_suite.cpp  search.cpp  static_exchange.cpp  tablebase.cpp  transposition_table.cpp
tests/: bench_smoke_test.py  build_stockfish_tuning_suite_smoke_test.py  compare_benchmark_results_smoke_test.py  core_tests.cpp  engine_tests.cpp  evaluate_nnue_checkpoint_smoke_test.py  extract_benchmark_misses_smoke_test.py  extract_postmortem_suite_smoke_test.py  gauntlet_smoke_test.py  import_kaggle_stockfish_nnue_smoke_test.py  import_lichess_evaluations_smoke_test.py  import_lichess_puzzles_smoke_test.py  nnue_feature_cache_smoke_test.py  nnue_feature_set_smoke_test.py  nnue_pairwise_ranker_smoke_test.py  nnue_training_pipeline_smoke_test.py  play_server_smoke_test.py  postmortem_smoke_test.py  rebalance_nnue_dataset_smoke_test.py  uci_smoke_test.py
tools/: analyze_nnue_dataset.py  build_nnue_dataset.py  build_nnue_feature_cache.py  build_nnue_pairwise_dataset.py  build_stockfish_tuning_suite.py  check_nnue_parity.py  compare_benchmark_results.py  evaluate_nnue_checkpoint.py  export_nnue.py  extract_benchmark_misses.py  extract_postmortem_suite.py  gauntlet.py  gauntlet_live_server.py  gauntlet_postmortem.py  import_kaggle_stockfish_nnue.py  import_lichess_evaluations.py  import_lichess_puzzles.py  nnue_model.py  play_server.py  rebalance_nnue_dataset.py  train_nnue.py  train_nnue_ranker.py
